--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="secondaryButton">#624B21</color>
     <color name="primaryButton">#847D4B</color>
+    <color name="suggestionColor">#99FFFFFF</color>
 </resources>
