--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".activitys.RegisterActivity">
+    tools:context=".activitys.loginRegister.RegisterActivity">
 
     <TextView
         android:id="@+id/textView3"
