--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -235,32 +235,12 @@
         android:id="@+id/imgGoogle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:contentDescription="@string/imageDescription"
-        app:layout_constraintBottom_toBottomOf="@+id/imgFacebook"
-        app:layout_constraintEnd_toStartOf="@+id/imgFacebook"
-        app:srcCompat="@drawable/imggoogle"
-        tools:ignore="ImageContrastCheck" />
-
-    <ImageView
-        android:id="@+id/imgFacebook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/imageDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-        app:srcCompat="@drawable/imgfacebook" />
-
-    <ImageView
-        android:id="@+id/imgTwitter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:contentDescription="@string/imageDescription"
-        app:layout_constraintBottom_toBottomOf="@+id/imgFacebook"
-        app:layout_constraintStart_toEndOf="@+id/imgFacebook"
-        app:srcCompat="@drawable/imgtwitter" />
+        app:layout_constraintTop_toBottomOf="@+id/btnShadowLogin"
+        app:srcCompat="@drawable/imggoogle"
+        tools:ignore="ImageContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
