--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/rounded_border">
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/txtItemCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/exampleText"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imgItem"
+        android:id="@+id/imgItemCategory"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -30,8 +30,8 @@
         android:contentDescription="@string/imageDescription"
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView10"
+        app:layout_constraintEnd_toStartOf="@+id/txtItemCategory"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/dictionary" />
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
