--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -77,7 +77,6 @@
         android:shadowColor="@color/white"
         android:text="@string/explore"
         android:textColor="@color/white"
-        android:labelFor="@+id/txtExplorar"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,9 +92,10 @@
         android:background="@android:color/transparent"
         android:ems="10"
         android:gravity="bottom|start"
+        android:hint="@string/placehoalderExplore"
         android:inputType="text"
-        android:text="@string/placehoalderExplore"
-        android:textColor="@color/placehoalderColor"
+        android:textColor="@color/white"
+        android:textColorHint="@color/suggestionColor"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView13"
         app:layout_constraintEnd_toEndOf="parent"
