Mejorado tamaño de menu de abajo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorError">#FF0000</color>
     <color name="colorBlue">#4D8EB2</color>
     <color name="placehoalderColor">#99FFFFFF</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
