--- a/app/src/main/res/layout/activity_categori.xml
+++ b/app/src/main/res/layout/activity_categori.xml
@@ -97,7 +97,7 @@
         app:srcCompat="@drawable/banner" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/imgCategori"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
