--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,16 @@
     <item
         android:id="@+id/navProfile"
         android:icon="@drawable/userimage"
+        android:enabled="true"
         android:title="@string/profile" />
     <item
         android:id="@+id/navDictionari"
         android:icon="@drawable/dictionary"
+        android:enabled="true"
         android:title="@string/dictionary" />
     <item
         android:id="@+id/navLearn"
         android:icon="@drawable/learnimage"
+        android:enabled="true"
         android:title="@string/learn" />
 </menu>
